--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px 50px;
-   background-color: rgba(166, 166, 166, 0.8); /* semi-transparent gray */
+   background-color: #f28cb8;
   backdrop-filter: blur(5px);
 }
 
